--- a/public/templates/list.html
+++ b/public/templates/list.html
@@ -31,7 +31,7 @@
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#{{key}}">
             <label ng-repeat="(key,value) in row._source">
-              <span class="badge badge-light"> {{key}}: </span> {{row._source[key]}}
+              <span class="badge badge-light format"> {{key}}: </span> <label class="format">{{row._source[key]}}</label>
               &nbsp; 
             </label> 
           </a>
@@ -41,10 +41,10 @@
         <div class="panel-body" ng-repeat="(key,value) in row._source">
           <div class="row">
             <div class="col-sm-2">
-              <span class="badge badge-dark">{{key}}</span> 
+              <span class="badge badge-dark format">{{key}}</span> 
             </div>
             <div class="col-sm-10">
-              <textarea class="form-control" rows="1" type="text" ng-model="row._source[key]"></textarea>
+              <textarea ng-disabled="key == 'ip'" class="form-control" rows="1" type="text" ng-model="row._source[key]"></textarea>
             </div>
           </div>
         </div>
